# diamond

./: Cargo.toml  LICENSE  README.md
src/: database.rs  git.rs  github.rs  main.rs
