[package]
name = "diamond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.37.0", features = ["full"] }
